# rpcserver

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE  export_symbols
docgen/: .gitignore  ConfluenceUpload.py  GenerateDocs.sh  README.md
docgen/patch/: 0001-Simplified-docs-generation.patch
include/: IAbstractRpcServer.h  IRpcExternalEventListener.h  IRpcMethodBinder.h  IRpcServerBuilder.h  IRpcServerControl.h  WsRpcServerBuilder.h
src/: WsRpcServer.cpp  WsRpcServer.h  WsRpcServerBuilder.cpp
src/connector/: AbstractPeerServerConnector.h  PeerProtocolHandler.h  WsClientCtx.h  WsConnector.h
src/interface/: IClientPeerConnectionHandler.h  IPeerServerConnector.h  IPeerServerHandler.h  IRpcEventManagerListener.h
src/server/: RpcEventManager.h  RpcPeerServer.h
